<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="beginExp">开始体验</string>
    <string name="mainBtn1">按钮1</string>
    <string name="mainBtn2">按钮2</string>
    <string name="mainBtn3">按钮3</string>
    <string name="mainBtn4">按钮4</string>
    <string name="mainBtn5">按钮5</string>

</resources>
